Cambio Post Entrega

--- a/pages/cuidadoresprimarios.html
+++ b/pages/cuidadoresprimarios.html
@@ -88,12 +88,12 @@
                 <div class="col-sm-12 text-center">
                   <h1 class="display-2">Contenidos</h1>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
                   <div class="CerebroAnidado">
                     <div class="Cerebro_Anidado_Img"> 
                         <img class="Brain" src="../multimedia/cerebro.png" width="600vw" alt="Cerebro">
                     </div>
-                    <button type="button" class="btn btn-primary btn-lg-sm">El cerebro de mi hijx</button> <a href="botón2"></a>
+                    <div class="col text-center"><button type="button" class="btn btn-primary btn-lg-sm">El cerebro de mi hijx</button> <a href="botón2"></a></div>
                     <div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facilis sequi eos aut molestias velit corrupti eum dignissimos quibusdam repudiandae exercitationem molestiae aliquid et atque, quas nobis tenetur sunt eaque!</p>
                     </div>   
                 </div> 
@@ -103,7 +103,7 @@
                     <div class="Emociones_Anidado_Img">
                     <img class="Emotions" src="../multimedia/emociones.png" width="600vw" alt="Emociones del cuidador">
                     </div>
-                    <button type="button" class="btn btn-primary btn-lg-sm">Emociones del cuidador</button> <a href="botón2"></a>
+                    <div class="col text-center"> <button type="button" class="btn btn-primary btn-lg-sm">Emociones del cuidador</button> <a href="botón2"></a></div>
                     <div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facilis sequi eos aut molestias velit corrupti eum dignissimos quibusdam repudiandae exercitationem molestiae aliquid et atque, quas nobis tenetur sunt eaque!</p>
                     </div>
                 </div>    
